state saving feature added
delete game feature added

major bug for skipping player's kala fixed